# obpcreator

./: README.md  pyproject.toml  setup.cfg  test_contour.py  test_convert.py  test_cubes.py  test_examples.py  test_screws.py
docs/: Documentation.docx  scanning_strategies.md
examples/: cube.py  cube_different_height.py  cube_point_ordered.py  gyroid.py  multiple_parts.py  new_tests.py  obpcompile.py  simple_build_contour.py  simple_build_infill.py  simple_cube.py  test_cubes.py  test_cubes_loop.py  test_examples.py  test_file_loop.py  testtest.py
obpcreator/: contour.py  data_model.py  generate_BSE_scan_pattern.py  generate_build.py  generate_scan_patterns.py  infill.py  point_geometry.py  point_infill_creation.py  setup_build.py  simple_input.py
obpcreator/scanning_strategies/: contour_strategies.py  infill_strategies.py
obpcreator/support_functions/: matrix_generation.py  offset_paths.py  pv_mesh_manipulation.py  slicer.py
obpcreator/visualisation/: basic_vis.py  layer_vis.py  point_geometry_2D_view.py  point_vis.py  pv_mesh_vis.py
tests/models/: cube1.stl  cube2.stl  ring.stl
