[metadata]
name = obpcreator
version = 0.0.1
author = Anton Wiberg
author_email = wiberg.anton@gmail.com
description = Generation of open beam path files based on different strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiberganton/obpgenerator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    svgpathtools
    numpy
    matplotlib
    obplib
    pyvista
    shapely
    pydantic
    pytest
python_requires = >=3.7
include_package_data = True
